--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint './src/**/*.{ts,tsx,js}'",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js}'"
   },
   "browserslist": {
     "production": [
@@ -30,5 +29,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
